<FrameLayout
    android:background="@drawable/bg_imagetwo_opt"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.futureblink.zipy.ContactUs">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_marginBottom="20dp"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/write_to_us_at" />
        <TextView
            android:layout_marginBottom="40dp"
            android:id="@+id/zipyEmail"
            android:clickable="true"
            android:textColor="@color/app_orange"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:text="@string/zipy_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/call_us_at" />
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/zipyCall"
            android:clickable="true"
            android:textColor="@color/app_orange"
            android:textSize="20sp"
            android:text="@string/zipy_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true" />
    </LinearLayout>
</FrameLayout>
