<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/bg_imagetwo"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.futureblink.zipy.SignUpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/logo"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/logo_opt"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_phone_number_for_otp_verification"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textAlignment="center"
                android:typeface="sans"
                android:layout_marginBottom="10dp" />
            <RelativeLayout
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="5dp"
                    android:id="@+id/phoneNumber"
                    android:typeface="sans"
                    android:inputType="phone"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:textColorHint="#ababab"
                    android:hint="@string/phone_number"
                    android:textSize="18sp"/>
                <Button
                    android:id="@+id/sendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_otp"
                    android:onClick="checkLength"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/app_orange"
                android:textSize="16sp" android:typeface="sans"
                android:textAllCaps="false"
                android:background="@drawable/bkg"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp">
                <EditText
                    android:id="@+id/otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="#ababab"
                    android:hint="@string/enter_otp"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"
                    android:inputType="phone"
                    android:maxLength="6"
                    android:layout_centerHorizontal="true"/>
                <Button
                    android:id="@+id/otpButton"
                    android:layout_below="@id/otp"
                    android:layout_margin="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/app_orange"
                    android:text="@string/go"
                    android:onClick="onClick"
                    android:textSize="24sp"
                    android:background="@drawable/bkg"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
