<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@drawable/bg_imagetwo_opt"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.futureblink.zipy.PasswordActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logo"
                android:contentDescription="@string/logo"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/logo_opt"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:id="@+id/text"
                android:textAlignment="center"
                android:layout_below="@id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:typeface="sans"
                android:text="@string/please_choose_a_password" />
            <EditText
                android:layout_marginTop="40dp"
                android:layout_below="@id/text"
                android:layout_gravity="center"
                android:id="@+id/password"
                android:typeface="sans"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/rounded_box_edit_text"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:textSize="18sp"
                android:inputType="textPassword" />
            <EditText
                android:layout_marginTop="40dp"
                android:layout_below="@id/password"
                android:layout_gravity="center"
                android:id="@+id/confirm_password"
                android:typeface="sans"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/rounded_box_edit_text"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textSize="18sp"
                android:inputType="textPassword" />
            <Button
                android:layout_below="@id/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="@color/app_orange"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginTop="55dp"
                android:typeface="sans"
                android:onClick="passwordConfirm"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bkg"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
